--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -528,7 +528,7 @@ span {
 }
 
 @media only screen and (min-width: 310px) and (max-width:500px) {
-#adBottom {
+.adBottom {
 left:0;
 position: fixed;
 text-align:center;
